Fix font size unit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,8 @@
         android:paddingBottom="50dp"
         android:background="@color/colorPrimary"
         app:krumbsStartItem="Home"
-        app:krumbsTypeface="@font/allan"
-        app:krumbsTextSize="14sp"
+        app:krumbsTypeface="fonts/quicksand.ttf"
+        app:krumbsTextSize="24sp"
         app:krumbsCurrentItemTextColor="@color/colorAccent"
         app:krumbsPreviousItemTextColor="@color/colorPrimaryDark"
         app:krumbsSeparatorTintColor="@color/colorPrimaryDark"
