--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#34495e</color>
     <color name="colorPrimaryDark">#2c3e50</color>
     <color name="colorAccent">#1abc9c</color>
+
+    <color name="silver">#bdc3c7</color>
 </resources>
