--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#2c3e50</color>
     <color name="colorAccent">#1abc9c</color>
 
-    <color name="silver">#bdc3c7</color>
+    <color name="gray">#ecf0f1</color>
 </resources>
